Bugfix: small footer alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,7 @@ footer {
   padding: 4em;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .footer-inner .column {
